# ESP32_light_time_control

./: README.md
ESP32_RTC_Light/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32_RTC_Light/main/: CMakeLists.txt  Kconfig.projbuild  dns_server.c  root.html  script.js  softap_example_main.c  style.css
ESP32_RTC_Light/main/ulp/: ulp.S
PCB files/: PCB_ESP32 RTC Light.json  SCH_ESP32 RTC Light.json
